Fix app startup exception